--- a/style/style.css
+++ b/style/style.css
@@ -11,7 +11,7 @@ align-items: center;
 height: 100vh;
 }
 
-.fullScreen {
+.preFullScreen {
     position: fixed;
     display: flex;
     justify-content: space-around;
@@ -90,4 +90,6 @@ button {
     cursor: pointer;
 }
 
-.
+.chcecked {
+    background-color: red;
+}
